--- a/pom-mandatory-assignment/Makefile
+++ b/pom-mandatory-assignment/Makefile
@@ -1,5 +1,5 @@
 all:
-	pdflatex main && bibtex main && pdflatex main && pdflatex main
+	pdflatex main && biber main && pdflatex main && pdflatex main
 
 clean:
 	rm -f main.{aux,bbl,blg,dvi,fdb_latexmk,fls,log,toc}
